# NanoBlade

./: Cargo.toml  README.en.md  README.md  README.ru.md
plugins/hello-world/: Cargo.toml
plugins/hello-world/src/: lib.rs
plugins/http-echo/: Cargo.toml
plugins/http-echo/src/: lib.rs
plugins/telegram-bot/: Cargo.toml
plugins/telegram-bot/src/: lib.rs
src/: main.rs
wit/: nexus-runtime.wit
